[workspace]
members = ["flexible_inspect_rs", "flexible_inspect_py", "flexible_inspect_js"]

[workspace.package]
edition = "2021"
version = "2.0.0"
authors = ["Mansur Azatbek <mansur62624@gmail.com>"]
license = "MIT"
description = "Library for creating a custom validator"
repository = "https://github.com/m62624/flexible_inspect"

[profile.release]
lto = true
strip = true
codegen-units = 1