[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "pystval"
version = "0.4.0"
description = "Библиотека для создания кастомного валидатора"
requires-python = ">=3.7"
keywords = ["validate", "regex", "rust"]
authors = [
  {email = "mansur62624@gmail.com"},
  {name = "Mansur Azatbek"}
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
