[package]
name = "flexible-inspect-js"
authors = { workspace = true }
description = { workspace = true }
version = { workspace = true }
edition = "2021"
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.180", features = ["derive"] }
flexible_inspect_rs = { path = "../flexible_inspect_rs", features = [
    "serde",
    "export_to_other_languages",
] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
