[package]
name = "flexible_inspect_js"
authors = { workspace = true }
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.180", features = ["derive"] }
flexible_inspect_rs = { path = "../flexible_inspect_rs", features = [
    "serde",
    "export_to_other_languages",
] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.19"
fern = "0.6.2"
chrono = "0.4.26"
