[package]
name = "flexible-inspect-py"
authors = { workspace = true }
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexible_inspect_rs = { path = "../flexible_inspect_rs", features = [
    "export_to_other_languages",
] }
pyo3 = { version = "0.19.1", features = [
    "abi3",
    "abi3-py37",
    "generate-import-lib",
    "multiple-pymethods",
] }
pyo3-asyncio = { version = "0.19", features = [
    "attributes",
    "async-std-runtime",
    "testing",
] }
async-std = { version = "1.12.0", features = ["attributes"] }

[package.metadata.maturin]
category = "tool"

[features]
extension-module = ["pyo3/extension-module"]
