[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "flexible_inspect_py"
version = "2.0.0"
description = "Library for creating a custom validator"
requires-python = ">=3.7"
keywords = ["validate", "regex", "rust"]
authors = [{ email = "mansur62624@gmail.com" }, { name = "Mansur Azatbek" }]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]

[project.urls]
"Homepage" = "https://github.com/m62624/pystval"
