[package]
name = "flexible_inspect_rs"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "flexible_inspect_rs"

# Core library dependencies
[dependencies]
serde = { version = "1.0.180", features = ["derive"], optional = true }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
async-trait = "0.1.72"
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
regex = "1.9.1"
indexmap = "2.0.0"
[features]
serde = ["dep:serde", "indexmap/serde"]
export_to_other_languages = []


[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde_json = "1.0.104"
