[package]
name = "flexible_inspect_rs"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "flexible_inspect_rs"

# Core library dependencies
[dependencies]
serde = { version = "1.0.180", features = ["derive"], optional = true }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
async-trait = "0.1.72"
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
regex = "1.9.1"
indexmap = "2.0.0"
colored = "2.0.4"
time = { version = "0.3.25", features = ["local-offset", "formatting"] }

# 
[features]
# Support for validator serializations and desyarilizations, includes
# + Rule/RuleBytes
# + Cartridge
# + TemplateValidator
# (Off by default)
serde = ["dep:serde", "indexmap/serde"]
# Option to add support for `Arc<str>` and `Arc<[u8]>` types to the validator, 
# necessary for safe export to other programming languages
# (For use in Rust, this option is useless. Off by default)
export_to_other_languages = []
# Inherit logging support from Rust, does not disable logging completely, 
# just allows you to replace the logging constructor 
# (data format, output to a specific channel, etc.) in other programming languages
# (On by default)
default = ["log_rust"]
log_rust = []


[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde_json = "1.0.104"
