[package]
name = "pystval-python"
authors = { workspace = true }
description = { workspace = true }
version = { workspace = true }
edition = "2021"
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pystval = { path = "../pystval-core-rust", features = [
    "serde",
    "export_another_langs",
] }
pyo3 = { version = "0.19.1", features = [
    "abi3",
    "abi3-py37",
    "generate-import-lib",
    "multiple-pymethods",
] }
pyo3-asyncio = { version = "0.19", features = [
    "attributes",
    "async-std-runtime",
    "testing",
] }

[package.metadata.maturin]
category = "tool"
